base/static/css/site.scss
@import "_variables";

body {
  .page-loading-icon {
    display: none;
    left: 10px;
    position: relative;
  }

  &.wait {
    cursor: wait !important;

    .page-loading-icon {
      display: inline-block;
    }
  }
}

html {
  @for $i from 0 through $footer-links-max {
    &.cms-ready {

      body.footer-links-#{$i} {
        main.site-main {
          min-height: calc(100vh - #{get-not-main-height($i) + $django-cms-toolbar});

          @media (min-width: map-get($grid-breakpoints, md)) {
            min-height: calc(100vh - #{get-not-main-height($i, md) + $django-cms-toolbar});
          }

          @media (min-width: map-get($grid-breakpoints, xl)) {
            min-height: calc(100vh - #{get-not-main-height($i, xl) + $django-cms-toolbar});
          }
        }
      }

      &.cms-toolbar-expanded {
        body.footer-links-#{$i} {
          main.site-main {
            min-height: calc(100vh - #{get-not-main-height($i) + $django-cms-toolbar-expanded});

            @media (min-width: map-get($grid-breakpoints, md)) {
              min-height: calc(100vh - #{get-not-main-height($i, md) + $django-cms-toolbar-expanded});
            }

            @media (min-width: map-get($grid-breakpoints, xl)) {
              min-height: calc(100vh - #{get-not-main-height($i, xl) + $django-cms-toolbar-expanded});
            }
          }
        }
      }
    }
  }
}

// django cms support
html {
  &.cms-ready {
    .navbar {
      top: $django-cms-toolbar;
    }
    &.cms-toolbar-expanded {
      .navbar {
        top: $django-cms-toolbar-expanded;
      }
    }
  }
}

.post-video_wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

